# Deviations-from-spectral-Dirac-comb-due-to-semiperiodic-pulses

./: .gitignore  A_A+1.py  A_A+1_2e6.eps  A_A+2_2e6.eps  Periodic-pulses-paper.yml  RB_time_series_2e6.npy  RB_time_series_4e5.npy  README.md  U_K.py  constraints_ts.py  create_figure_2.py  create_figure_3.py  create_figure_4.py  create_figure_5.py  create_figure_6.py  create_figure_7.py  create_figure_7_8.py  create_figure_8.py  create_figure_RB.py  create_figure_asym_lap_amp.py  create_figure_exp_lap_amp.py  create_figure_gamma_wait.py  create_figure_gaussian_jitter_wait.py  create_figure_gaussian_waiting_times.py  create_lorentz_time_series.py  create_time_series.py  dt_A_2e6.py  dt_A_4e5.py  energy_cond_av.py  figure1_f.py  figure2_f.py  figure2_gamma_f.py  fit_function_RB_model.py  forcing_RB_2e6.py  forcing_RB_4e5.py  gaussian_waiting_times.py  gen_gammainv_cf.py  gen_norm_num_psd.py  gen_norm_wait_num_psd.py  lorenz_system.py  (+24 more)
BOUT_files/: calculate_K.py  rb-model-public.cxx
jitter_numeric_vs_analytic/: create_figure.py  gen_norm_jitter_num_psd.py
old_scripts_and_data/: spectrum_RB_2e6_fixed_amp.py
rayleigh_benard/: create_figure.py  fitdata_1_6e-3.txt  fitdata_1e-4.txt
rayleigh_benard/BOUT_files/: BOUT.inp  calculate_E.py
rayleigh_benard/RB_data/: E_1.6e-3_data.npy  time_1.6e-3_data.npy
wait_compare/: create_figure.py  create_figure_fGn_wait.py  gen_fGn_wait_num_psd.py  gen_gammainv_cf.py  gen_norm_wait_num_psd.py
